# agentmail

./: .gitignore  HACKATHON_REGISTRATION.md  MESSAGE_FORMAT.md  PRD.md  README.md  SKILL.md  checklist.json  justfile  package-lock.json  package.json
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
clients/typescript/: package-lock.json  package.json  research-offchain-messages.ts
clients/typescript/src/: cli.ts  index.ts  messaging.ts  registry.ts
demo-data/: simple-demo-results.json
idl/: agentmail.json
inbox-server/: package.json
inbox-server/src/: security.ts  server.ts
inbox-server/test/: server.test.ts
keys/: agentmail-program.json
program/: Cargo.toml  build.rs
program/src/: entrypoint.rs  errors.rs  lib.rs
program/src/instructions/: definition.rs  mod.rs
program/src/instructions/deregister_agent/: accounts.rs  data.rs  instruction.rs  processor.rs
program/src/instructions/register_agent/: accounts.rs  data.rs  instruction.rs  mod.rs  processor.rs
program/src/instructions/update_agent/: accounts.rs  data.rs  instruction.rs  processor.rs
program/src/state/: agent_registry.rs  mod.rs
program/src/traits/: account.rs  instruction.rs
program/src/utils/: account_utils.rs  mod.rs  program_utils.rs
scripts/: e2e-demo.ts  example-agent.ts  generate-clients.ts  generate-ts-client.ts  openclaw-integration.ts  register-nix.ts  simple-demo.ts
scripts/lib/: agentmail-codama-builder.ts
scripts/lib/updates/: set-instruction-account-default-values.ts
tests/integration-tests/: Cargo.toml
tests/integration-tests/src/: lib.rs  (+3 more)
(+8 files in other folders)
