[package]
name = "agentmail"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(disabled_unit_tests)'] }

[features]
no-entrypoint = []
idl = []

[dependencies]
codama = { workspace = true }
pinocchio = { workspace = true, features = ["cpi", "copy"] }
solana-address = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-system = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
codama = { workspace = true }
serde_json = { workspace = true }
